# zillow-agent-demo

./: .env.example  .gitignore  ADD_IMAGE_INSTRUCTIONS.md  API_KEY_FIX.md  COMMIT_SUMMARY.md  COMMIT_VERIFICATION.md  COVERAGE_ANALYSIS.md  Dockerfile  FILTERING_FIX_SUMMARY.md  FIX_API_KEY_ISSUE.md  FIX_SECRETS.md  MANDATORY_RULES.md  MARKET_ANALYSIS_FIX_SUMMARY.md  MODEL_UPDATE_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_PART2_SUMMARY.md  PHASE5_UI_IMPLEMENTATION.md  PHASE_2_COMPLETE.md  PHASE_2_FINAL_STATUS.md  PHASE_2_REVIEW.md  PHASE_2_SUMMARY.md  PRODUCTION_READY_CHECKLIST.md  PROJECT_REVIEW.md  PUSH_INSTRUCTIONS.md  PYTEST_FIX.md  RATE_LIMIT_FIX.md  README.md  SETUP_API_KEYS.md  STREAMLIT_CLOUD_SETUP.md  STREAMLIT_REDEPLOY.md  TEST_RESULTS.md  TEST_STATUS.md  TEST_VERIFICATION.md  UI_REQUIREMENTS.md  VERIFICATION_COMPLETE.md  WORKFLOW_SUCCESS_SUMMARY.md  ZILLOW_API_FIX.md  ZILLOW_API_UPDATE.md  ZILLOW_API_UPGRADE.md  check_env.py  (+14 more)
.github/workflows/: tests.yml
.streamlit/: secrets.toml.example  version.txt
docs/: agents.md  api-documentation.md  architecture.md  deployment.md  images.md  mcp-servers.md
docs/images/: IMAGE_PLACEHOLDER.md  README.md
src/: __init__.py
src/agents/: __init__.py  advisor_agent.py  analysis_agent.py  base_agent.py  search_agent.py
src/graph/: __init__.py  state.py  workflow.py
src/mcp_servers/: __init__.py  market_analysis_server.py  real_estate_server.py  user_context_server.py
src/real_estate_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
(+17 files in other folders)
